Version 2.0.0 (1.21.1)
- Status effects are now cleared upon starting the manhunt.

- "Free the End" advancement is now revoked from players automatically when the game is started.
  - In the even that earning the achievement does not end the game, killing the ender dragon can now also end it.

- Resetting/Refreshing the player tracker can now also be done through a keybind instead of a command (defaulted to: 'G').
  - Command may be removed in the future in favor of this change/addition